[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/img/left_02.tres" type="Texture" id=2]
[ext_resource path="res://player/img/left_00.tres" type="Texture" id=3]
[ext_resource path="res://player/img/left_04.tres" type="Texture" id=4]
[ext_resource path="res://player/img/left_03.tres" type="Texture" id=5]
[ext_resource path="res://player/img/left_01.tres" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 37.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 111.005

[node name="Player" type="KinematicBody2D" groups=["Net", "Player"]]
position = Vector2( 1, 0 )
collision_mask = 0
script = ExtResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -89 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "idle_left"
speed_scale = 2.0

[node name="collision_shape2d" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="force_5_z_index" type="Node2D" parent="."]
z_index = 5

[node name="player_name_label" type="Label" parent="force_5_z_index"]
unique_name_in_owner = true
margin_left = -253.0
margin_top = -301.0
margin_right = 252.0
margin_bottom = -197.0
grow_horizontal = 2
grow_vertical = 2
text = "player name"
align = 1
valign = 1

[node name="kill_ability_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="collision_shape_2d" type="CollisionShape2D" parent="kill_ability_area"]
shape = SubResource( 3 )

[node name="camera_2d" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="way_ponit_group" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="listen_audio_stream_player_2d" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="Network_tick_rate" to="." method="_on_Network_tick_rate_timeout"]
[connection signal="body_entered" from="kill_ability_area" to="." method="_on_kill_ability_area_body_entered"]
[connection signal="body_exited" from="kill_ability_area" to="." method="_on_kill_ability_area_body_exited"]
